tdf#107968 - double slash handling misleading; add unit test

Change-Id: Ide52926eff56065e7368615338ea33dcb2f87c62